objects/demo_object__c.object
<CustomObject>
    <fields>
        <fullName>desk_filed__c</fullName>
        <label>desk filed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name_filed__c</fullName>
        <label>name filed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>demo object</label>
    <nameField>
        <label>demo object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>demo objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>